--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,9 @@ remote_theme: "jekyll/minima@1e8a445"
 
 plugins:
   - jekyll-feed
+  - jekyll-remote-theme
 
 minima:
   skin: dark
+
 permalink: /blogs/:title/
