--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,7 @@
 title: avalanches
-remote_theme: "jekyll/minima@1e8a445"
+remote_theme: minima
 
 plugins:
   - jekyll-feed
-  - jekyll-remote-theme
 
 permalink: /blogs/:title/
