--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 title: avalanches.wtf
+  avatar: "https://raw.githubusercontent.com/gvcxm2j5KQbrnl/avalanches.wtf/refs/heads/main/assets/logo.png"
 theme: minima
 author: gvcxm2j5KQbrnl
 plugins:
